# March

./: LICENSE  README.md  abstract.md  build_hooks.py  pyproject.toml  setup.py
docs/: index.html
march/: Makefile  __init__.py  _core.py  hf.py
march/demo/: demo_basic.py  demo_smollm2_memory.py
march/src/: kv_trie.c  kv_trie.h  march.c  march.h  page_allocator.c  page_allocator.h  view_builder.c  view_builder.h
